pygi-foreign-cairo.c: fix include for py3cairo.h

The pkg-config info includes the "pycairo" folder already.

https://bugzilla.gnome.org/show_bug.cgi?id=746742